# wmnet

./: .gitignore  .redis.dataocean  .rediscloud  404.html  CNAME  Cargo.toml  README.md  Rocket.toml  about.html  bot.md  env  gh-pages  gh-pages.pub  github.md  gui.html  hardware.html  home_supplicant.conf  index.html  install.html  jumo.html  notes.md  print.html  searchindex.js  searchindex.json  telegramm.html  thingspeak.html  tips.md  wapm.toml  wpa_supplicant.conf  wqms.service
.cargo/: config
.github/: ISSUE_TEMPLATE.md
.github/workflows/: deploy.yml  docs.yml  publish.yml
.token/: ibm-south-afrika-1
channels/: dos.html  ec.html  index.html  orp.html  oxygen.html  ph.html  temp.html  tox.html  tur.html
ci/: args.ion  build-and-copy-to-pi  build.sh  build_wasm.ion  copy-to-pi.sh  install.ion  pizero.sh  restart.sh  rm-wqms.sh  setup.sh  start.sh  start_server.ion  status.sh  stop.sh  ubuntu.ion
config/: .profile  wmnet.toml  wpa_supplicant.conf  wqms.toml
config/.ngrok2/: ngrok.yml
config/root/etc/default/: isc-dhcp-server
config/root/etc/dhcp/: dhcpd.conf
config/root/etc/network/: interfaces
config/root/etc/systemd/system/: ngrok.service  wmnet-bot.service  wmnet-collect.service  wmnet-inky.service  wmnet.service  wqms-bot.service  wqms-collect.service  wqms-inky.service  wqms.service
config/root/etc/udev/rules.d/: local.rules
config/root/home/pi/.ngrok2/: ngrok.yml
config/ss/: config.json
db/: sqlite3.db  sqlite3.db-shm  sqlite3.db-wal
devices/: index.html  nitritox.html
docs/: Parameter SA.xlsx  Suedafrika Datenübertragung.doc  book.toml  client.md  cmd.md  collect.md  description data unit.doc  display.md  noname  readme.md
docs/src/: SUMMARY.md  about.md  cmd.md  display.md  gui.md  hardware.md  jumo.md  network.md  readme.md  telegramm.md
docs/src/channels/: dos.md  ec.md  orp.md  oxygen.md  ph.md  readme.md  temp.md  tox.md  tur.md
docs/src/devices/: jumo.md  nitritox.md  readme.md
docs/src/publish/: firebase.md  readme.md  thingspeak.md
github/: build.yml  environment.yml  publish.yml
src/: analog.rs  banner.rs  channel.rs  cli.rs  config.rs  error.rs  fb.rs  frontend.rs  googlecheets.rs  inky.rs  interface.rs  jumo.rs  lib.rs  logger.rs  metrics.rs  network.rs  nitri.rs  prop.rs  rpi.rs  setting.rs  ssh.rs  station.rs  store.rs  svg.rs  telegram.rs  thingspeak.rs  util.rs  watch.rs  wifi.rs  wms.rs  ws.rs
src/web/: mod.rs
src/weg/: nitritox.rs
templates/static/: index.html
www/public/js/: dashboard.js
www/public/styles/: custom.css
www/views/: welcome.hbs
www/views/channels/: form.hbs  list.hbs
www/views/components/: alert.hbs  chip.hbs  error.hbs  form.hbs  map.hbs  modal.hbs  succes.hbs
www/views/dashboard/: alarm.hbs  index.hbs  pagination.hbs  round.hbs
www/views/layouts/: main.hbs  mainold.hbs
www/views/props/: form.hbs  list.hbs  show.hbs
www/views/wifi/: form.hbs  list.hbs
