[package]
name = "wqms"
version = "0.1.0"
authors = ["smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## cli
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
## error
failure = "0.1.8"
## log
log = "0.4.8"
femme = "2.1.0"
embedded-graphics = "0.4"
linux-embedded-hal = "0.2"
profont = "0.1"
ssd1675 = { version = "0.1", git = "https://github.com/wezm/ssd1675.git", branch = "busy-wait" }
yansi = "0.5.0"
atty = "0.2.14"

## decode
regex= "1.3.1"
serial = "0.4.0"
## Time
chrono = "0.4.11"

## System
which = "4.0.0"

# Serialize
serde = { version = "1.0.111", default-features = false, features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.6"
ron  = "0.6.0"

## Async
lazy_static = "1.4.0"
once_cell = "1.4.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.0"

## Notify
notify = "5.0.0-pre.2"
ctrlc = "3.1.4"

## Data
redis = "0.16.0"
sled = "0.31.0"
firebase-rs=  "1.0.3"
csv="*"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
lockfile = "0.2.2"

# ssh
ssh2 = "0.8"
# git
git2 = "0.13"

tempfile = "3.1"
reqwest = "0.10.4"

## Web 
rocket="0.4.4"
url = "2.1"
juniper = "0.14.2"
tera = "1.3.1"
comrak = "0.7.0"
handlebars = "3.1.0"

[dependencies.rocket_contrib]
default-features = false
features = ["handlebars_templates", "diesel_sqlite_pool", "serve", "msgpack","json"]
version = "0.4"

[dev-dependencies]
mockers = "0.21"
mockers_derive = "0.21"
env_logger = { version = "0.7", default-features = false }
