[package]
name = "wqms"
version = "0.1.0"
authors = ["smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## cli
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
## error
failure = "0.1.8"
## log
log = "0.4.11"
femme = "2.1.1"
embedded-graphics = "0.4"
linux-embedded-hal = "0.2"
profont = "0.1"
ssd1675 = { version = "0.1", git = "https://github.com/wezm/ssd1675.git", branch = "busy-wait" }
yansi = "0.5.0"
atty = "0.2.14"

## decode
regex= "1.3.1"
serial = "0.4.0"
## Time
chrono = "0.4.11"

## System
# which = "4.0.1"

# Serialize
serde = { version = "1.0.111", default-features = false, features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.6"
ron  = "0.6.0"

## Async
lazy_static = "1.4.0"
once_cell = "1.4.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.2"

## Notify
notify = "5.0.0-pre.2"
ctrlc = "3.1.4"

ads1x1x = "0.2.1"
nb = "0.1.2"
embedded-hal = "0.2.4"

## Data
#redis = "0.16.0"
# sled = "0.32.0"
# firebase = "0.9.1"
# firebase-rs =  "1.0.3"
csv="1.1.3"
# time="0.2.16"
# diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
# diesel_migrations = "1.4.0"
# lockfile = "0.2.2"

# ssh
ssh2 = "0.8"
# git
git2 = "0.13"
tempfile = "3.1"
reqwest =  { version = "0.10", features = ["blocking", "json"] }
## Web 
url = "2.1"
# tera = "1.3.1"
openssl = { version = "0.10", features = ["vendored"] }
tide = "0.11.0"
async-std = { version = "1.6.2", features = ["attributes"] }
redis = "0.16.0"
wifi = "0.1.0"
shell = "0.3.2"
# surf = "1.0.3"


## Modbus
# tokio-serial = { version = "4.3.3", optional = true, default-features = false }
# tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }

# libmodbus-rs = { git = "https://github.com/zzeroo/libmodbus-rs.git" }

libmodbus-rs = "0.8.3"

futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
## Bots 
telegram-bot = "0.7.0"
async-trait = "0.1.38"
rand_distr = "0.3.0"
rand = "0.7.3"
## Rocket
# rocket = { version = "0.4", default-features = false }
# rocket_contrib = "0.4"