[package]
name = "wmnet"
version = "0.1.1"
authors = ["smolkov <sascha.smolkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
## cli
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
## error
failure = "0.1.8"
## log
anyhow = "1.0.26"
# sysfs_gpio = "0.5"

log = "0.4.11"
femme = "2.1.1"
embedded-graphics = "0.6.2"
linux-embedded-hal = "0.3.0"
profont = "0.4.0"
ssd1675 = "0.3.0"
yansi = "0.5.0"
atty = "0.2.14"

## decode
# regex= "1.3.1"
serial = "0.4.0"
## Time
chrono = "0.4.15"

## System
openssl = { version = "0.10", features = ["vendored"] }

# Serialize
serde = { version = "1.0.111", default-features = false, features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5.6"
ron  = "0.6.1"

## Async
lazy_static = "1.4.0"
once_cell = "1.4.0"
crossbeam = "0.7.3"
crossbeam-channel = "0.4.4"

## Notify
notify = "5.0.0-pre.2"
ctrlc = "3.1.6"

ads1x1x = "0.2.1"
nb = "1.0.0"
embedded-hal = "0.2.4"

## Data
csv="1.1.3"

# ssh
ssh2 = "0.8.2"
# git
git2 = "0.13"
tempfile = "3.1"
reqwest =  { version = "0.10", features = ["blocking", "json"] }
## Web 
url = "2.1"
# tera = "1.3.1"
redis = "0.17.0"
wifi = "0.1.0"
shell = "0.3.2"
# surf = "1.0.3"


## Modbus
# tokio-serial = { version = "4.3.3", optional = true, default-features = false }
# tokio-modbus = { version = "*", default-features = false, features = ["rtu"] }

# libmodbus-rs = { git = "https://github.com/zzeroo/libmodbus-rs.git" }

libmodbus-rs = "0.8.0"

futures = "0.3"
tokio = { version = "0.2", features = ["macros", "time", "fs"] }
## Bots 
telegram-bot = "0.7.0"

## Async
tide = "0.13.0"
async-std = { version = "1.6.5", features = ["attributes"] }
async-trait = "0.1.41"
async-task = "4.0.2"
sqlx = { version = "0.3.5", features = ["sqlite", "chrono"] }
tide-handlebars="0.5"
handlebars="3.5.0"
# async-std = { version = "1.6.3", features = ["attributes"] }
# tide = "0.13.0"

rand_distr = "0.3.0"
rand = "0.7.3"
glob = "0.3.0"
walkdir = "2.3.1"
wifiscanner = "0.5.1"
async-redis-session = "0.1.1"
html-index = "0.3.4"
zip = "0.5.8"
surf = "2.1.0"
## Rocket
# rocket = { version = "0.4", default-features = false }
# rocket_contrib = "0.4"

# Metrics
#metrics = "0.12.1"
#metrics-core = "0.5.2"
#metrics-runtime = "0.13.0"
